RF001B - Swagger configuration, JWT token for authorization, REST service relacionado a usuarios (guardar, autoregistro, filtrar, eliminar, obtenerPorId)